fixed some spacing

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -66,7 +66,7 @@
   }
 
   .RecipeItem {
-    width: 23%;
+    width: 22%;
   }
 
   .Meals__info .info_box {
