--- a/src/components/Logo/Logo.css
+++ b/src/components/Logo/Logo.css
@@ -1,7 +1,6 @@
 .Logo {
   display: flex;
   justify-content: center;
-  margin: 20px;
 }
 
 .Logo img {
