--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -7,7 +7,6 @@
 
 .Navigation a {
   padding: 0 10px;
-  margin: 5px;
   border-right: 1px solid grey;
 }
 
